todo: add_to_position

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(std_vector_13_2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(std_vector_13_2 main.cpp helper.h)
+add_executable(std_vector_13_2 main.cpp)
